fix ornament spacing in popups

--- a/Ciliora-Secunda/gnome-shell/gnome-shell.css
+++ b/Ciliora-Secunda/gnome-shell/gnome-shell.css
@@ -2016,6 +2016,7 @@ StEntry:insensitive StIcon,
 .popup-menu-ornament {
   text-align: right;
   width: 1em;
+  color: #8ab2d5;
 }
 
 .popup-menu-arrow {
@@ -2031,15 +2032,31 @@ StEntry:insensitive StIcon,
 }
 
 .popup-menu-item {
-  spacing: .6em;
+  spacing: 0;
 }
 
 .popup-menu-item:ltr {
-  padding: .4em 1.9em .4em .2em;
+  padding: .5em 1em .5em 0;
+}
+
+.popup-menu-item:ltr > * {
+  margin: 0 .6em 0 0;
+}
+
+.popup-menu-item:ltr .popup-menu-ornament {
+  margin: 0 .2em 0 .2em !important;
 }
 
 .popup-menu-item:rtl {
-  padding: .4em .2em .4em 1.9em;
+  padding: .5em 0 .5em 1em;
+}
+
+.popup-menu-item:rtl > * {
+  margin: 0 0 0 .6em;
+}
+
+.popup-menu-item:rtl .popup-menu-ornament {
+  margin: 0 .2em 0 .2em !important;
 }
 
 .popup-menu-item:checked {
